fix: scrollbar style at forms

--- a/src/assets/components/BuyForm/styles.scss
+++ b/src/assets/components/BuyForm/styles.scss
@@ -227,20 +227,16 @@
             padding-right: 40px;
 
             &::-webkit-scrollbar {
-                width: 28px;
-            }
-            &::-webkit-scrollbar-track {
-                background-color: $super-light-grey;
-                border: 1px solid $super-light-grey;
-                border-radius: 2px;
+                width: 7px;
+                border-radius: 10px;
             }
             &::-webkit-scrollbar-thumb {
-                background-color: $dark-grey;
-                border-left: 10px solid $super-light-grey;
-                border-right: 10px solid $super-light-grey;
+                background-color: $light-grey;
+                border: 10px solid $light-grey;
+                border-radius: 20px;
             }
             &::-webkit-scrollbar-button {
-                background-color: $super-light-grey;
+                background-color: $light-grey;
                 height: 0px;
             }
         }
